--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,22 +1,34 @@
+body{
+		background-image: url("/Users/Nao/Desktop/Basic-Portfolio/assets/images/pink_rice.png");
+		height: 90em;
+}
 
-#header{
+header{
 	background: #ffffff;
 	border-bottom: solid #cccccc 1px;
+	margin: 0;
+}
+
+.scale{
+	width: 960px;
+	margin-right: auto;
+	margin-left: auto;
 }
 
 #name{
-	background: #4aaaa5;
-	padding: 20px;
+	background: #EEA0C4;
+	padding: 40px;
 	width: 250px;
 	margin-top: 0;
 	margin-bottom: 0;
-	margin-left: 100px;
 }
 
 h1{
 	color: #ffffff;
 	font-family: 'Georgia', Times, Times New Roman, serif;
 	text-align: center;
+	font-size: 40px;
+	font-weight: bold;
 }
 
 .navigation{
@@ -24,64 +36,67 @@ h1{
 	float: right;
 	top: -50px;
 	position: relative;
-	clear: right;
-	margin-right: 20%;
-
+	margin-left: 20%;
+	text-decoration: none;
 }
 
-.contents{
-	background-image: url("/Users/Nao/Desktop/Basic-Portfolio/assets/images/pink_rice.png");
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	margin: 0 auto;
+.main960px{
+	width: 960px;
+	margin-right: auto;
+	margin-left: auto;
+	clear: both;
 }
 
 .mainpage{
 	background: #ffffff;
-	margin: 50px 0px 50px 100px;
 	width: 650px;
 	float: left;
+	margin-top: 40px;
+	padding-bottom: 20px;
 }
 
 h2{
 	background: #ffffff;
-	margin: 30px 30px;
+	margin: 20px 30px;
 	padding: 30px 30px;
 	border-bottom: solid #cccccc 3px;
+	font-size: 30px;
+	font-weight: bold;
 }
 
 img{ 
-	 width: 180px;
-	 height: 250px;
+	 width: 250px;
+	 height: 200px;
 	 float: left;
-	 padding: 1em;
+	 padding: 30px;
 }
 
 .sidebar{
 	background: #ffffff;
-	margin: 50px 50px;
-	padding: 10px 15px 20px 15px;
 	width: 250px;
-	float: left;
+	float: right;
+	margin-top: 40px;
+	padding-bottom: 20px;
 }
 
 h3{
 	background: #ffffff;
 	margin: 20px 20px;
-	padding: 20px 20px;
+	padding: 20px 10px;
 	border-bottom: solid #cccccc 3px;
+	font-size: 20px;
+	font-weight: bold;
 }
 
 h2,h3{
 	font-family: 'Georgia', Times, Times New Roman, serif;
-	color: #4aaaa5;
+	color: #EEA0C4;
 }
 
 p{
 	color: #777777;
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-	padding: 1em;
+	padding: 2em;
 }
 
 .logo{
@@ -90,14 +105,18 @@ p{
 	padding: 10px;
 }
 
-.footer{
-	position: fixed;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	background: #666666;
+footer{
+	width: 100%;
+	margin: 0 auto;
+	background-color: #666666;
+	clear: both;
 	text-align: center;
-	height: 30px;
-	}
-
+	border-top: solid 10px #EEA0C4;
+	color: #ffffff;
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	padding: 40px;
+	position: fixed;
+	bottom: 0px;
+	z-index: 2;
+}
 
