fixed relative path Again

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 body{
-		background-image: url("/Users/Nao/Desktop/Basic-Portfolio/assets/images/pink_rice.png");
+		background-image: url("assets/images/pink_rice.png");
 		height: 90em;
 }
 
